不要ページ削除

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -8,10 +8,10 @@ meta_image = ""
 themecolor = ""
 
 themeOptions = ["dark", "light", "hacker", "solarized", "kimbie"]
-notAllowedTypesInHome = ["contact", "talks", "about", "showcase", "publication", "presentation", "resume"]
-notAllowedTypesInHomeSidebar = ["about", "archive", "showcase", "publication", "presentation", "resume"]
-notAllowedTypesInArchive = ["about", "talks", "showcase", "publication", "presentation", "resume"]
-notAllowedTypesInHomeFeed = ["about", "archive", "contact", "talks", "showcase", "publication", "presentation", "resume", "gallery"]
+notAllowedTypesInHome = ["contact", "talks", "about", "resume"]
+notAllowedTypesInHomeSidebar = ["about", "archive", "resume"]
+notAllowedTypesInArchive = ["about", "talks", "resume"]
+notAllowedTypesInHomeFeed = ["about", "archive", "contact", "talks", "resume"]
 
 viewportSize = "normal" # widest, wider, wide, normal, narrow
 enableUiAnimation = true
@@ -56,14 +56,14 @@ publicationIcon = "📚"
 typeIcon = "🎯"
 
 # whoami
-myname = "zzossig"
-email = "zzossig@gmail.com"
+myname = "Masayuki Onishi"
+email = ""
 whoami = "Web Developer"
 bioImageUrl = ""
 useGravatar = false
-location = "Seoul, Korea"
-organization = "Hugo"
-link = "https://zzossig.io/ko"
+location = "Tokyo, Japan"
+organization = ""
+link = "https://qiita.com/Moo_Moo_Farm"
 
 # sidebar
 enableBio = true
@@ -93,11 +93,6 @@ enableThemeChange = true
 
 # service
 googleTagManager = "" # GTM-XXXXXX
-baiduAnalytics = ""
-enableBusuanzi = false
-busuanziSiteUV = true
-busuanziSitePV = true
-busuanziPagePV = true
 
 # rss
 updatePeriod = "" # Possible values: 'hourly', 'daily', 'weekly', 'monthly', or 'yearly'.
@@ -130,32 +125,6 @@ commento = false
   clientId = ""           # Your client ID
   clientSecret = ""       # Your client secret
 
-# Valine.
-# You can get your appid and appkey from https://leancloud.cn
-# more info please open https://valine.js.org
-[valine]
-  enable = false
-  appId = '你的appId'
-  appKey = '你的appKey'
-  notify = false  # mail notifier , https://github.com/xCss/Valine/wiki
-  verify = false # Verification code
-  avatar = 'mm' 
-  placeholder = '说点什么吧...'
-  visitor = false
-
-[changyan]
-  changyanAppid = ""        # Changyan app id             # 畅言
-  changyanAppkey = ""       # Changyan app key
-
-[livere]
-  livereUID = ""            # LiveRe UID                  # 来必力
-
-# Isso: https://posativ.org/isso/
-[isso]
-  enable = false
-  scriptSrc = "" # "https://isso.example.com/js/embed.min.js"
-  dataAttrs = "" # "data-isso='https://isso.example.com' data-isso-require-author='true'"
-
 [socialOptions]
   email = "mailto:your@email.com"
   phone = ""
@@ -173,13 +142,11 @@ commento = false
   stack-exchange = ""
   telegram = ""
   steam = ""
-  weibo = ""
   douban = ""
   csdn = ""
   gitlab = ""
   mastodon = ""
   jianshu = ""
-  zhihu = ""
   signal = ""
   whatsapp = ""
   matrix = ""
@@ -190,7 +157,7 @@ commento = false
 
 [donationOptions]
   enable = false
-  alipay = "" 
+  alipay = ""
   wechat = ""
   paypal = ""
   patreon = ""
