日付のViewフォーマット修正

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -45,7 +45,7 @@ paginateWindow = 1
 talksPaginate = 5
 talksGroupByDate = "2006"
 pubPaginate = 20
-writtenTimeIcon = "📅"
+writtenTimeIcon = "  "
 modifiedTimeIcon = "📝"
 readingTimeIcon = "☕"
 authorIcon = "✍️"
