--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,6 +1,6 @@
-logoText = "Zzo"
+logoText = "StudyRecord"
 logoType = "short" # long, short
-description = "The Zzo theme for Hugo example site."
+description = "気ままに記録するブログ"
 custom_css = []
 custom_js = []
 useFaviconGenerator = true # https://www.favicon-generator.org/
