--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org"
+baseURL = "https://masayuki-0319.github.io/hugo-my-blog/"
 title = ""
 theme = "zzo"
 publishDir = "docs"
