memo置き場追加

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -8,13 +8,13 @@ meta_image = ""
 themecolor = ""
 
 themeOptions = ["dark", "light", "hacker", "solarized", "kimbie"]
-notAllowedTypesInHome = ["contact", "talks", "about", "resume"]
-notAllowedTypesInHomeSidebar = ["about", "archive", "resume"]
+notAllowedTypesInHome = ["contact", "talks", "about", "resume", "memo"]
+notAllowedTypesInHomeSidebar = ["about", "archive", "resume", "memo"]
 notAllowedTypesInArchive = ["about", "talks", "resume"]
 notAllowedTypesInHomeFeed = ["about", "archive", "contact", "talks", "resume"]
 
 viewportSize = "normal" # widest, wider, wide, normal, narrow
-enableUiAnimation = true
+enableUiAnimation = false
 hideSingleContentsWhenJSDisabled = false
 enablePinnedPosts = true
 minItemsToShowInTagCloud = 1 # Minimum items to show in tag cloud
