--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,7 +9,7 @@ themecolor = ""
 
 themeOptions = ["dark", "light", "hacker", "solarized", "kimbie"]
 notAllowedTypesInHome = ["contact", "talks", "about", "resume", "memo"]
-notAllowedTypesInHomeSidebar = ["about", "archive", "resume", "memo"]
+notAllowedTypesInHomeSidebar = ["about", "archive", "resume"]
 notAllowedTypesInArchive = ["about", "talks", "resume"]
 notAllowedTypesInHomeFeed = ["about", "archive", "contact", "talks", "resume"]
 
